K1J-1994: Life cycle Java 25, gradle 9, springboot 4, Jackson 3, Junit 5, dependency bump (#900)