@@ -18,15 +18,14 @@
  */
 package se.inera.intyg.common.af00213.v1.model.converter;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.base.Charsets;
 import com.google.common.io.Resources;
+import com.helger.schematron.svrl.AbstractSVRLMessage;
 import com.helger.schematron.svrl.SVRLHelper;
 import com.helger.schematron.svrl.jaxb.SchematronOutputType;
 import jakarta.xml.bind.JAXB;
@@ -34,18 +33,17 @@ import jakarta.xml.bind.JAXBContext;
 import jakarta.xml.bind.JAXBElement;
 import jakarta.xml.bind.JAXBException;
 import java.io.ByteArrayInputStream;
-import java.io.IOException;
 import java.io.StringReader;
 import java.io.StringWriter;
 import java.net.URL;
-import java.util.stream.Collectors;
+import java.nio.charset.StandardCharsets;
 import javax.xml.transform.stream.StreamSource;
-import org.junit.BeforeClass;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.MockitoAnnotations;
 import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 import se.inera.intyg.common.af00213.v1.model.internal.Af00213UtlatandeV1;
 import se.inera.intyg.common.af00213.v1.rest.Af00213ModuleApiV1;
 import se.inera.intyg.common.af00213.v1.validator.InternalDraftValidatorImpl;
@@ -62,25 +60,27 @@ import se.inera.intyg.common.util.integration.json.CustomObjectMapper;
 import se.riv.clinicalprocess.healthcond.certificate.registerCertificate.v3.ObjectFactory;
 import se.riv.clinicalprocess.healthcond.certificate.registerCertificate.v3.RegisterCertificateType;
 import se.riv.clinicalprocess.healthcond.certificate.types.v3.DatePeriodType;
+import tools.jackson.databind.ObjectMapper;
 
-@RunWith(SpringJUnit4ClassRunner.class)
+@ExtendWith(SpringExtension.class)
 @ContextConfiguration(classes = {BefattningService.class})
-public class ConverterTest {
+class ConverterTest {
 
-  private InternalDraftValidator internalValidator = new InternalDraftValidatorImpl();
+  private final InternalDraftValidator<Af00213UtlatandeV1> internalValidator =
+      new InternalDraftValidatorImpl();
 
-  private ObjectMapper objectMapper = new CustomObjectMapper();
+  private final ObjectMapper objectMapper = new CustomObjectMapper();
 
   private static URL getResource(String href) {
     return Thread.currentThread().getContextClassLoader().getResource(href);
   }
 
   public ConverterTest() {
-    MockitoAnnotations.initMocks(this);
+    MockitoAnnotations.openMocks(this);
   }
 
-  @BeforeClass
-  public static void setUp() {
+  @BeforeAll
+  static void setUp() {
     final var mapper = mock(UnitMapperUtil.class);
 
     when(mapper.getMappedUnit(any(), any(), any(), any(), any()))
@@ -97,9 +97,9 @@ public class ConverterTest {
   }
 
   @Test
-  public void doSchematronValidationAf00213() throws Exception {
+  void doSchematronValidationAf00213() throws Exception {
     String xmlContents =
-        Resources.toString(getResource("v1/transport/af00213.xml"), Charsets.UTF_8);
+        Resources.toString(getResource("v1/transport/af00213.xml"), StandardCharsets.UTF_8);
 
     RegisterCertificateTestValidator generalValidator = new RegisterCertificateTestValidator();
     assertTrue(generalValidator.validateGeneral(xmlContents));
@@ -108,16 +108,17 @@ public class ConverterTest {
         new RegisterCertificateValidator(Af00213ModuleApiV1.SCHEMATRON_FILE);
     SchematronOutputType result =
         validator.validateSchematron(
-            new StreamSource(new ByteArrayInputStream(xmlContents.getBytes(Charsets.UTF_8))));
+            new StreamSource(
+                new ByteArrayInputStream(xmlContents.getBytes(StandardCharsets.UTF_8))));
 
     assertEquals(0, SVRLHelper.getAllFailedAssertions(result).size());
   }
 
   @Test
-  public void outputJsonFromXml() throws Exception {
+  void outputJsonFromXml() throws Exception {
 
     String xmlContents =
-        Resources.toString(getResource("v1/transport/af00213.xml"), Charsets.UTF_8);
+        Resources.toString(getResource("v1/transport/af00213.xml"), StandardCharsets.UTF_8);
     RegisterCertificateType transport =
         JAXB.unmarshal(new StringReader(xmlContents), RegisterCertificateType.class);
 
@@ -132,8 +133,9 @@ public class ConverterTest {
         new RegisterCertificateValidator(Af00213ModuleApiV1.SCHEMATRON_FILE);
     SchematronOutputType result =
         validator.validateSchematron(
-            new StreamSource(new ByteArrayInputStream(convertedXML.getBytes(Charsets.UTF_8))));
-    assertEquals(getErrorString(result), 0, SVRLHelper.getAllFailedAssertions(result).size());
+            new StreamSource(
+                new ByteArrayInputStream(convertedXML.getBytes(StandardCharsets.UTF_8))));
+    assertEquals(0, SVRLHelper.getAllFailedAssertions(result).size(), getErrorString(result));
 
     // Why not validate internal model as well?
     internalValidator.validateDraft(utlatandeFromJson);
@@ -142,14 +144,13 @@ public class ConverterTest {
   private String getErrorString(SchematronOutputType result) {
     StringBuilder errorMsg = new StringBuilder();
     SVRLHelper.getAllFailedAssertions(result).stream()
-        .map(e -> e.getText())
-        .collect(Collectors.toList())
-        .forEach(e -> errorMsg.append(e));
+        .map(AbstractSVRLMessage::getText)
+        .toList()
+        .forEach(errorMsg::append);
     return errorMsg.toString();
   }
 
-  private String getXmlFromModel(RegisterCertificateType transport)
-      throws IOException, JAXBException {
+  private String getXmlFromModel(RegisterCertificateType transport) throws JAXBException {
     StringWriter sw = new StringWriter();
     JAXBContext jaxbContext =
         JAXBContext.newInstance(RegisterCertificateType.class, DatePeriodType.class);
