@@ -18,30 +18,31 @@
  */
 package se.inera.intyg.common.fk7263.transformation;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import com.google.common.base.Charsets;
 import com.google.common.io.Resources;
 import com.helger.schematron.sch.SchematronResourceSCH;
 import com.helger.schematron.svrl.SVRLHelper;
 import com.helger.schematron.svrl.jaxb.SchematronOutputType;
 import java.io.ByteArrayInputStream;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 import javax.xml.transform.Source;
 import javax.xml.transform.stream.StreamSource;
 import javax.xml.validation.Schema;
-import org.junit.BeforeClass;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
 import se.inera.intyg.common.fk7263.model.converter.TransportToInternal;
 import se.inera.intyg.common.fk7263.rest.Fk7263ModuleApi;
 import se.inera.intyg.common.support.modules.converter.InternalConverterUtil;
@@ -50,8 +51,8 @@ import se.inera.intyg.common.support.modules.converter.mapping.MappedUnit;
 import se.inera.intyg.common.support.modules.converter.mapping.UnitMapperUtil;
 import se.inera.intyg.common.support.xml.SchemaValidatorBuilder;
 
-@RunWith(MockitoJUnitRunner.class)
-public class Fk7263TransformerTest {
+@ExtendWith(MockitoExtension.class)
+class Fk7263TransformerTest {
 
   // CHECKSTYLE:OFF LineLength
   private static final String COMMON_UTLATANDE_SCHEMA = "core_components/MU7263-RIV_3.1.xsd";
@@ -78,8 +79,8 @@ public class Fk7263TransformerTest {
 
   @InjectMocks private Fk7263ModuleApi fk7263ModuleApi;
 
-  @BeforeClass
-  public static void setup() throws Exception {
+  @BeforeAll
+  static void setup() throws Exception {
     // Initialize TransportConverterUtil and InternalConverterUtil
     final var mapper = mock(UnitMapperUtil.class);
 
@@ -117,12 +118,13 @@ public class Fk7263TransformerTest {
   }
 
   @Test
-  public void testTransformationFailsOnMissingFunktionstillstand() throws Exception {
-    List<String> testFiles = Arrays.asList("fk7263_utanfunktionstillstand.xml");
+  void testTransformationFailsOnMissingFunktionstillstand() throws Exception {
+    List<String> testFiles = List.of("fk7263_utanfunktionstillstand.xml");
 
     for (String xmlFile : testFiles) {
       String xmlContentsInput =
-          Resources.toString(getResource("Fk7263TransformerTest/" + xmlFile), Charsets.UTF_8);
+          Resources.toString(
+              getResource("Fk7263TransformerTest/" + xmlFile), StandardCharsets.UTF_8);
 
       if (!validateIntygstjansterXSD(xmlContentsInput)) {
         fail();
@@ -137,20 +139,19 @@ public class Fk7263TransformerTest {
 
       assertEquals(1, SVRLHelper.getAllFailedAssertions(output).size());
       assertTrue(
-          SVRLHelper.getAllFailedAssertions(output)
-              .get(0)
-              .getText()
+          Objects.requireNonNull(SVRLHelper.getAllFailedAssertions(output).getFirst().getText())
               .contains("Ett 'MU' måste ha minst ett 'Behov av sjukskrivning'"));
     }
   }
 
   @Test
-  public void testTransformationFailsOnMissingArbetsbegransning() throws Exception {
-    List<String> testFiles = Arrays.asList("fk7263_utanarbetsbegransning.xml");
+  void testTransformationFailsOnMissingArbetsbegransning() throws Exception {
+    List<String> testFiles = List.of("fk7263_utanarbetsbegransning.xml");
 
     for (String xmlFile : testFiles) {
       String xmlContentsInput =
-          Resources.toString(getResource("Fk7263TransformerTest/" + xmlFile), Charsets.UTF_8);
+          Resources.toString(
+              getResource("Fk7263TransformerTest/" + xmlFile), StandardCharsets.UTF_8);
 
       if (!validateIntygstjansterXSD(xmlContentsInput)) {
         fail();
@@ -165,15 +166,13 @@ public class Fk7263TransformerTest {
 
       assertEquals(1, SVRLHelper.getAllFailedAssertions(output).size());
       assertTrue(
-          SVRLHelper.getAllFailedAssertions(output)
-              .get(0)
-              .getText()
+          Objects.requireNonNull(SVRLHelper.getAllFailedAssertions(output).getFirst().getText())
               .contains("Ett 'MU' måste ha minst ett 'Behov av sjukskrivning'"));
     }
   }
 
   @Test
-  public void testTransformationAccepted() throws Exception {
+  void testTransformationAccepted() throws Exception {
 
     List<String> testFiles =
         Arrays.asList(
@@ -188,7 +187,8 @@ public class Fk7263TransformerTest {
 
     for (String xmlFile : testFiles) {
       String xmlContentsInput =
-          Resources.toString(getResource("Fk7263TransformerTest/" + xmlFile), Charsets.UTF_8);
+          Resources.toString(
+              getResource("Fk7263TransformerTest/" + xmlFile), StandardCharsets.UTF_8);
 
       if (!validateIntygstjansterXSD(xmlContentsInput)) {
         fail();
@@ -207,7 +207,7 @@ public class Fk7263TransformerTest {
 
   private boolean validateFk7263OutputSchematron(String xml) throws Exception {
     SchematronOutputType result = getFk7263OutputSchematron(xml);
-    return SVRLHelper.getAllFailedAssertions(result).size() == 0;
+    return SVRLHelper.getAllFailedAssertions(result).isEmpty();
   }
 
   private SchematronOutputType getFk7263OutputSchematron(String xml) throws Exception {
@@ -216,12 +216,12 @@ public class Fk7263TransformerTest {
       throw new IllegalArgumentException("Invalid Schematron!");
     }
     return schematronResource.applySchematronValidationToSVRL(
-        (new StreamSource(new ByteArrayInputStream(xml.getBytes(Charsets.UTF_8)))));
+        (new StreamSource(new ByteArrayInputStream(xml.getBytes(StandardCharsets.UTF_8)))));
   }
 
   private boolean validateIntygstjansterXSD(String xml) {
     StreamSource xmlSource =
-        new StreamSource(new ByteArrayInputStream(xml.getBytes(Charsets.UTF_8)));
+        new StreamSource(new ByteArrayInputStream(xml.getBytes(StandardCharsets.UTF_8)));
     try {
       lakarutlatandeInputSchema.newValidator().validate(xmlSource);
       return true;
@@ -233,7 +233,7 @@ public class Fk7263TransformerTest {
 
   private boolean validateIntygstjansterOutputXSD(String xml) {
     StreamSource xmlSource =
-        new StreamSource(new ByteArrayInputStream(xml.getBytes(Charsets.UTF_8)));
+        new StreamSource(new ByteArrayInputStream(xml.getBytes(StandardCharsets.UTF_8)));
     try {
       fk7263sitOutputSchema.newValidator().validate(xmlSource);
       return true;
