@@ -18,15 +18,13 @@
  */
 package se.inera.intyg.common.ag7804.v1.model.converter;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.base.Charsets;
 import com.google.common.io.Resources;
 import com.helger.schematron.svrl.SVRLHelper;
 import com.helger.schematron.svrl.jaxb.SchematronOutputType;
@@ -35,22 +33,21 @@ import jakarta.xml.bind.JAXBContext;
 import jakarta.xml.bind.JAXBElement;
 import jakarta.xml.bind.JAXBException;
 import java.io.ByteArrayInputStream;
-import java.io.IOException;
 import java.io.StringReader;
 import java.io.StringWriter;
 import java.net.URL;
-import java.util.stream.Collectors;
+import java.nio.charset.StandardCharsets;
 import javax.xml.transform.stream.StreamSource;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.mockito.Spy;
 import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 import se.inera.intyg.common.ag7804.v1.model.internal.Ag7804UtlatandeV1;
 import se.inera.intyg.common.ag7804.v1.rest.Ag7804ModuleApiV1;
 import se.inera.intyg.common.ag7804.v1.validator.InternalDraftValidatorImpl;
@@ -68,10 +65,11 @@ import se.inera.intyg.common.util.integration.json.CustomObjectMapper;
 import se.riv.clinicalprocess.healthcond.certificate.registerCertificate.v3.ObjectFactory;
 import se.riv.clinicalprocess.healthcond.certificate.registerCertificate.v3.RegisterCertificateType;
 import se.riv.clinicalprocess.healthcond.certificate.types.v3.DatePeriodType;
+import tools.jackson.databind.ObjectMapper;
 
-@RunWith(SpringJUnit4ClassRunner.class)
+@ExtendWith(SpringExtension.class)
 @ContextConfiguration(classes = {BefattningService.class})
-public class ConverterTest {
+class ConverterTest {
 
   @Spy private ValidatorUtil validatorUtil = new ValidatorUtil();
 
@@ -86,17 +84,17 @@ public class ConverterTest {
   }
 
   public ConverterTest() {
-    MockitoAnnotations.initMocks(this);
+    MockitoAnnotations.openMocks(this);
   }
 
-  @Before
-  public void setup() {
+  @BeforeEach
+  void setup() {
     when(webcertModuleService.validateDiagnosisCode(anyString(), anyString())).thenReturn(true);
     when(webcertModuleService.validateDiagnosisCodeFormat(anyString())).thenReturn(true);
   }
 
-  @BeforeClass
-  public static void setUp() {
+  @BeforeAll
+  static void setUp() {
     final var mapper = mock(UnitMapperUtil.class);
 
     when(mapper.getMappedUnit(any(), any(), any(), any(), any()))
@@ -113,8 +111,9 @@ public class ConverterTest {
   }
 
   @Test
-  public void doSchematronValidationAg7804() throws Exception {
-    String xmlContents = Resources.toString(getResource("v1/transport/ag7804.xml"), Charsets.UTF_8);
+  void doSchematronValidationAg7804() throws Exception {
+    String xmlContents =
+        Resources.toString(getResource("v1/transport/ag7804.xml"), StandardCharsets.UTF_8);
 
     RegisterCertificateTestValidator generalValidator = new RegisterCertificateTestValidator();
     assertTrue(generalValidator.validateGeneral(xmlContents));
@@ -123,15 +122,17 @@ public class ConverterTest {
         new RegisterCertificateValidator(Ag7804ModuleApiV1.SCHEMATRON_FILE);
     SchematronOutputType result =
         validator.validateSchematron(
-            new StreamSource(new ByteArrayInputStream(xmlContents.getBytes(Charsets.UTF_8))));
+            new StreamSource(
+                new ByteArrayInputStream(xmlContents.getBytes(StandardCharsets.UTF_8))));
 
     assertEquals(0, SVRLHelper.getAllFailedAssertions(result).size());
   }
 
   @Test
-  public void outputJsonFromXml() throws Exception {
+  void outputJsonFromXml() throws Exception {
 
-    String xmlContents = Resources.toString(getResource("v1/transport/ag7804.xml"), Charsets.UTF_8);
+    String xmlContents =
+        Resources.toString(getResource("v1/transport/ag7804.xml"), StandardCharsets.UTF_8);
     RegisterCertificateType transport =
         JAXB.unmarshal(new StringReader(xmlContents), RegisterCertificateType.class);
 
@@ -147,8 +148,9 @@ public class ConverterTest {
         new RegisterCertificateValidator(Ag7804ModuleApiV1.SCHEMATRON_FILE);
     SchematronOutputType result =
         validator.validateSchematron(
-            new StreamSource(new ByteArrayInputStream(convertedXML.getBytes(Charsets.UTF_8))));
-    assertEquals(getErrorString(result), 0, SVRLHelper.getAllFailedAssertions(result).size());
+            new StreamSource(
+                new ByteArrayInputStream(convertedXML.getBytes(StandardCharsets.UTF_8))));
+    assertEquals(0, SVRLHelper.getAllFailedAssertions(result).size(), getErrorString(result));
 
     // Why not validate internal model as well?
     internalValidator.validateDraft(utlatandeFromJson);
@@ -158,13 +160,12 @@ public class ConverterTest {
     StringBuilder errorMsg = new StringBuilder();
     SVRLHelper.getAllFailedAssertions(result).stream()
         .map(e -> e.getText())
-        .collect(Collectors.toList())
-        .forEach(e -> errorMsg.append(e));
+        .toList()
+        .forEach(errorMsg::append);
     return errorMsg.toString();
   }
 
-  private String getXmlFromModel(RegisterCertificateType transport)
-      throws IOException, JAXBException {
+  private String getXmlFromModel(RegisterCertificateType transport) throws JAXBException {
     StringWriter sw = new StringWriter();
     JAXBContext jaxbContext =
         JAXBContext.newInstance(RegisterCertificateType.class, DatePeriodType.class);
