@@ -65,12 +65,12 @@ import se.inera.intyg.common.support.modules.support.api.dto.ValidationMessageTy
 import se.inera.intyg.common.ts_diabetes.v4.model.converter.RespConstants;
 import se.inera.intyg.common.ts_diabetes.v4.utils.ScenarioFinder;
 
-public class InternalDraftValidatorTest {
+class InternalDraftValidatorTest {
 
   private final InternalDraftValidatorImpl validator = new InternalDraftValidatorImpl();
 
   @Test
-  public void validateMinimalValidUtkast() throws Exception {
+  void validateMinimalValidUtkast() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("pass-minimal").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
@@ -79,7 +79,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void validateCompleteValidUtkast() throws Exception {
+  void validateCompleteValidUtkast() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("pass-complete").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
@@ -88,11 +88,11 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule2a() throws Exception {
+  void failureDueToRule2a() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R2a").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -106,11 +106,11 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule2b() throws Exception {
+  void failureDueToRule2b() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R2b").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -124,11 +124,11 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule2c() throws Exception {
+  void failureDueToRule2c() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R2c").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -142,11 +142,11 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule3a() throws Exception {
+  void failureDueToRule3a() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R3a").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -160,11 +160,11 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule3b() throws Exception {
+  void failureDueToRule3b() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R3b").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -178,11 +178,11 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule4() throws Exception {
+  void failureDueToRule4() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R4").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -193,7 +193,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule8() throws Exception {
+  void failureDueToRule8() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R8").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
@@ -232,11 +232,11 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule9() throws Exception {
+  void failureDueToRule9() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R9").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    ValidationMessage error = res.getValidationErrors().get(0);
+    ValidationMessage error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -253,11 +253,11 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule18a() throws Exception {
+  void failureDueToRule18a() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R18a").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -275,11 +275,11 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule18b() throws Exception {
+  void failureDueToRule18b() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R18b").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -297,11 +297,11 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule19a() throws Exception {
+  void failureDueToRule19a() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R19a").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -314,15 +314,15 @@ public class InternalDraftValidatorTest {
                     + ALLMANT_MEDICINERING_MEDFOR_RISK_FOR_HYPOGYKEMI_TIDPUNKT_JSON_ID,
                 error.getField()),
         () -> assertEquals(ValidationMessageType.OTHER, error.getType()),
-        () -> assertEquals(error.getMessage(), "common.validation.d-11"));
+        () -> assertEquals("common.validation.d-11", error.getMessage()));
   }
 
   @Test
-  public void failureDueToRule19b() throws Exception {
+  void failureDueToRule19b() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R19b").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -335,15 +335,15 @@ public class InternalDraftValidatorTest {
                     + ALLMANT_MEDICINERING_MEDFOR_RISK_FOR_HYPOGYKEMI_TIDPUNKT_JSON_ID,
                 error.getField()),
         () -> assertEquals(ValidationMessageType.OTHER, error.getType()),
-        () -> assertEquals(error.getMessage(), "common.validation.d-08"));
+        () -> assertEquals("common.validation.d-08", error.getMessage()));
   }
 
   @Test
-  public void failureDueToRule19c() throws Exception {
+  void failureDueToRule19c() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R19c").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -359,11 +359,11 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule20a() throws Exception {
+  void failureDueToRule20a() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R20a").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -379,15 +379,15 @@ public class InternalDraftValidatorTest {
             assertEquals(
                 HYPOGLYKEMI_ATERKOMMANDE_SENASTE_ARET_TIDPUNKT_DELSVAR_ID, error.getQuestionId()),
         () -> assertEquals(ValidationMessageType.OTHER, error.getType()),
-        () -> assertEquals(error.getMessage(), "common.validation.d-11"));
+        () -> assertEquals("common.validation.d-11", error.getMessage()));
   }
 
   @Test
-  public void failureDueToRule20b() throws Exception {
+  void failureDueToRule20b() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R20b").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -403,15 +403,15 @@ public class InternalDraftValidatorTest {
             assertEquals(
                 HYPOGLYKEMI_ATERKOMMANDE_SENASTE_ARET_TIDPUNKT_DELSVAR_ID, error.getQuestionId()),
         () -> assertEquals(ValidationMessageType.OTHER, error.getType()),
-        () -> assertEquals(error.getMessage(), "common.validation.d-08"));
+        () -> assertEquals("common.validation.d-08", error.getMessage()));
   }
 
   @Test
-  public void failureDueToRule21a() throws Exception {
+  void failureDueToRule21a() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R21a").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -428,15 +428,15 @@ public class InternalDraftValidatorTest {
                 HYPOGLYKEMI_ATERKOMMANDE_VAKET_SENASTE_TRE_TIDPUNKT_DELSVAR_ID,
                 error.getQuestionId()),
         () -> assertEquals(ValidationMessageType.OTHER, error.getType()),
-        () -> assertEquals(error.getMessage(), "common.validation.d-11"));
+        () -> assertEquals("common.validation.d-11", error.getMessage()));
   }
 
   @Test
-  public void failureDueToRule21b() throws Exception {
+  void failureDueToRule21b() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R21b").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -453,15 +453,15 @@ public class InternalDraftValidatorTest {
                 HYPOGLYKEMI_ATERKOMMANDE_VAKET_SENASTE_TRE_TIDPUNKT_DELSVAR_ID,
                 error.getQuestionId()),
         () -> assertEquals(ValidationMessageType.OTHER, error.getType()),
-        () -> assertEquals(error.getMessage(), "common.validation.d-08"));
+        () -> assertEquals("common.validation.d-08", error.getMessage()));
   }
 
   @Test
-  public void failureDueToRule22a() throws Exception {
+  void failureDueToRule22a() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R22a").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -478,15 +478,15 @@ public class InternalDraftValidatorTest {
                 HYPOGLYKEMI_ALLVARLIG_SENASTE_TOLV_MANADERNA_TIDPUNKT_DELSVAR_ID,
                 error.getQuestionId()),
         () -> assertEquals(ValidationMessageType.OTHER, error.getType()),
-        () -> assertEquals(error.getMessage(), "common.validation.d-11"));
+        () -> assertEquals("common.validation.d-11", error.getMessage()));
   }
 
   @Test
-  public void failureDueToRule22b() throws Exception {
+  void failureDueToRule22b() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R22b").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -503,15 +503,15 @@ public class InternalDraftValidatorTest {
                 HYPOGLYKEMI_ALLVARLIG_SENASTE_TOLV_MANADERNA_TIDPUNKT_DELSVAR_ID,
                 error.getQuestionId()),
         () -> assertEquals(ValidationMessageType.OTHER, error.getType()),
-        () -> assertEquals(error.getMessage(), "common.validation.d-08"));
+        () -> assertEquals("common.validation.d-08", error.getMessage()));
   }
 
   @Test
-  public void failureDueToRules23_24() throws Exception {
+  void failureDueToRules23_24() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R23").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -526,11 +526,11 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule27a() throws Exception {
+  void failureDueToRule27a() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R27a").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -549,11 +549,11 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRules27b() throws Exception {
+  void failureDueToRules27b() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R27b").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -572,11 +572,11 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule28a() throws Exception {
+  void failureDueToRule28a() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R28a").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -587,7 +587,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule28b() throws Exception {
+  void failureDueToRule28b() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R28b").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
@@ -616,11 +616,11 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule29a() throws Exception {
+  void failureDueToRule29a() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R29a").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -637,11 +637,11 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule29b() throws Exception {
+  void failureDueToRule29b() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R29b").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -658,11 +658,11 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRules30a() throws Exception {
+  void failureDueToRules30a() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R30a").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -673,7 +673,7 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRules30b() throws Exception {
+  void failureDueToRules30b() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R30b").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
@@ -730,11 +730,11 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRules30c() throws Exception {
+  void failureDueToRules30c() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R30c").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -746,11 +746,11 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRules30d() throws Exception {
+  void failureDueToRules30d() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R30d").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -766,11 +766,11 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRules32() throws Exception {
+  void failureDueToRules32() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R32").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -784,11 +784,11 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRules33() throws Exception {
+  void failureDueToRules33() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R33").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -808,11 +808,11 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRules34() throws Exception {
+  void failureDueToRules34() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R34").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -832,11 +832,11 @@ public class InternalDraftValidatorTest {
   }
 
   @Test
-  public void failureDueToRule35a() throws Exception {
+  void failureDueToRule35a() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R35a").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -848,15 +848,15 @@ public class InternalDraftValidatorTest {
                 error.getField()),
         () -> assertEquals(BEDOMNING_SVAR_ID, error.getQuestionId()),
         () -> assertEquals(ValidationMessageType.INCORRECT_COMBINATION, error.getType()),
-        () -> assertEquals(error.getMessage(), "common.validation.d-12"));
+        () -> assertEquals("common.validation.d-12", error.getMessage()));
   }
 
   @Test
-  public void failureDueToRule35b() throws Exception {
+  void failureDueToRule35b() throws Exception {
     final var utlatande = ScenarioFinder.getInternalScenario("fail-R35b").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
@@ -868,16 +868,16 @@ public class InternalDraftValidatorTest {
                 error.getField()),
         () -> assertEquals(BEDOMNING_SVAR_ID, error.getQuestionId()),
         () -> assertEquals(ValidationMessageType.INCORRECT_COMBINATION, error.getType()),
-        () -> assertEquals(error.getMessage(), "common.validation.d-12"));
+        () -> assertEquals("common.validation.d-12", error.getMessage()));
   }
 
   @Test
-  public void failureDueToMissingVardenhetPostnummer() throws Exception {
+  void failureDueToMissingVardenhetPostnummer() throws Exception {
     final var utlatande =
         ScenarioFinder.getInternalScenario("fail-vardenhetensPostNummerSaknas").asInternalModel();
     final var res = validator.validateDraft(utlatande);
 
-    final var error = res.getValidationErrors().get(0);
+    final var error = res.getValidationErrors().getFirst();
     assertAll(
         () -> assertTrue(res.hasErrorMessages()),
         () -> assertFalse(res.hasWarningMessages()),
